--- a/src/components/ProductItem/style.css
+++ b/src/components/ProductItem/style.css
@@ -20,4 +20,9 @@
     padding: 12px;
     text-align: center;
     background: #40007F;
+    color: #fff;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 12px;
+    text-decoration: none;
 }
